# uspto_enriched_citation_mcp

./: .gitignore  .pre-commit-config.yaml  .prompt_injections.baseline  .secrets.baseline  API_KEY_GUIDE.md  CLAUDE.md  ENVIRONMENTS.md  INSTALL.md  PROMPTS.md  README.md  SECURITY_GUIDELINES.md  SECURITY_SCANNING.md  USAGE_EXAMPLES.md  feature_flags.example.conf  field_configs.yaml  pyproject.toml
.github/workflows/: security-scan.yml
.security/: check_prompt_injections.py  prompt_injection_detector.py
audits/: api-and-infrastructure.md  code-duplication-detection.md  comprehensive-security-report.md  deploy-scripts-security-audit.md  duplication-fix-plan.md  duplication-fixes-final.md  duplication-fixes-summary.md  error-handling-resilience-updated.md  error-handling-resilience.md  implementation-report-2025-11-18-parameter-refactoring.md  input-validation.md  logging-monitoring-comprehensive.md  logging-monitoring.md  naming-convention-guide.md  readability-and-naming-comprehensive.md  readability-and-naming-report.md  resilience-fault-tolerance-updated.md  resilience-fault-tolerance.md  secrets-management-audit.md  session-history-2025-11-18.md  solid-principles.md
deploy/: linux_setup.sh  validation-helpers.sh  windows_setup.ps1
docs/: graceful-degradation.md
reference/: README.md  USPTO Enriched Citation API v3.md
tests/: README.md  __init__.py  test_basic.py  test_convenience_parameters.py  test_field_configuration.py  test_integration.py  test_resilience.py  test_security.py  test_statistics.py  test_unified_key_management.py
(+35 files in other folders)
